--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
 
       <div class="info-grid">
         <div class="info-item">
+          <span>Age</span>
+          <strong>21</strong>
+        </div>
+        <div class="info-item">
           <span>Weight</span>
           <strong>23.3kg</strong>
         </div>
